--- a/3.3.ipynb
+++ b/3.3.ipynb
@@ -817,7 +817,6 @@
     }
    ],
    "source": [
-    "# Remove spam samples\n",
     "rnn_train_df = train_datapreprocessor.preprocess(remove_spam=True, remove_hashtags=True, remove_link=True, remove_whitespace_html=True, clean_text=True, balance_classes=False)\n",
     "rnn_test_df = test_datapreprocessor.preprocess(remove_spam=True, remove_hashtags=True, remove_link=True, remove_whitespace_html=True, clean_text=True, balance_classes=False)"
    ]
@@ -1291,9 +1290,9 @@
    "outputs": [],
    "source": [
     "# Predicting sentiments on new tweets\n",
-    "#rnn_predictions = model.predict(rnn_X_test)\n",
+    "rnn_predictions = model.predict(rnn_X_test)\n",
     "# Convert probabilities to binary predictions\n",
-    "rnn_predictions_discrete = (rnn_predictions > 0.5).astype(int)  "
+    "rnn_predictions_discrete = (rnn_predictions >= 0.5).astype(int)  "
    ]
   },
   {
